--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="net.widgetron.propeditor" android:versionCode="1">
+      package="net.widgetron.propeditor" android:versionCode="2">
        <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <application android:icon="@drawable/icon" android:label="@string/app_name">
 		<activity android:name="PEMainScreen" android:launchMode="standard">
@@ -23,6 +23,6 @@
 			</intent-filter>
 		</activity>
 	</application>
-    <uses-sdk android:minSdkVersion="4" />
+    <uses-sdk android:targetSdkVersion="3" android:minSdkVersion="3"/>
 
 </manifest> 
